--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "laravel/dusk": "^3.0",
+        "laravel/homestead": "^7.10",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
